--- a/components/swiper/style.module.css
+++ b/components/swiper/style.module.css
@@ -1,13 +1,9 @@
 .sliderContainer {
   position: relative;
-  height: 100%;
-}
-
-.swiper {
-  height: 100%;
 }
 
 .swiperImage {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
