--- a/components/browse/style.module.css
+++ b/components/browse/style.module.css
@@ -97,6 +97,7 @@
  .sectionLinksContainer {
   justify-content: center;
   flex-wrap: wrap;
+  gap: 0 20px;
  }
 
  .browseImages {
@@ -116,6 +117,33 @@
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
+ .sectionTitle {
+  font-size: clamp(1.2rem, 0.6273rem + 2.8635vw, 2rem);
+ }
+
+ .sectionText {
+  font-size: clamp(0.8rem, 0.4779rem + 1.6107vw, 1.25rem);
+ }
+
+ .sectionLinksContainer {
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 0 20px;
+ }
+
+ .browseImages {
+  padding-bottom: 1.8rem;
+  width: 100%;
+  height: 100%;
+ }
+
+ .browseLinks {
+  margin-bottom: 15px;
+ }
+
+ .linkItems {
+  font-size: clamp(1.2rem, 0.9852rem + 1.0738vw, 1.5rem);
+ }
 
 }
 
