--- a/components/header/style.module.css
+++ b/components/header/style.module.css
@@ -28,6 +28,152 @@
   color: var(--primary, #b88e2f);
 }
 
+.cartIcon {
+  position: relative;
+  z-index: 11;
+  cursor: pointer;
+  
+}
+
+.cartMenu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 27rem;
+  background-color: #fff;
+  padding: 2rem 1rem;
+  z-index: 11;
+  transform: translateX(39rem);
+  opacity: 0;
+  transition: all 0.4s;
+  height: 46rem;
+  border-radius: 5px;
+  overflow-y: hidden;
+}
+
+.cartItems {
+  max-height: 30rem;
+  overflow-y: auto;
+}
+
+.cartTitle {
+  font: 1.5rem "Poppins-SemiBold", sans-serif;
+  border-bottom: 1px solid #d9d9d9;
+  max-width: 18rem;
+  padding-bottom: 1.6rem;
+}
+
+.cartDesc,
+.productPrice {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.productName,
+.cartSubtotal,
+.linkFonts {
+  font: 0.9rem "Poppins-Medium", sans-serif;
+}
+
+.productQuantity,
+.productSpan {
+  font: 1rem "Poppins-Light", sans-serif;
+}
+
+.productSpan {
+  font-size: 0.75rem;
+  margin-inline: 15px;
+}
+
+.productPriceItem {
+  color: var(--primary, #b88e2f);
+  font: 0.85rem "Poppins-Medium", sans-serif;
+}
+
+.productDelete {
+  color: red;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.cartMenuTotal {
+  position: absolute;
+  width: 93%;
+  bottom: 1.5rem;
+  left: 1rem;
+}
+
+.subTotalItems {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #d9d9d9;
+  padding-bottom: 1rem;
+}
+
+.cartSubtotal {
+ font-family: "Poppins-Regular", sans-serif;
+}
+
+.cartSubPrice {
+  color: var(--primary);
+  font: 1rem "Poppins-SemiBold", sans-serif;
+  margin-left: 6rem;
+}
+
+.cartLinks {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.5rem;
+  
+}
+
+.linkFonts {
+  font-size: 0.90rem;
+}
+
+.linkFonts:hover {
+  color: var(--primary, #b88e2f);
+  border-color: var(--primary, #b88e2f);
+  transition: all 0.3s;
+}
+
+.border {
+  border: 1px solid #000;
+  border-radius: 50px;
+  padding: 6px 30px;
+}
+
+.add {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.close {
+  background-color: #fff;
+  position: absolute;
+  top: 2.5rem;
+  right: 3rem;
+  cursor: pointer;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #67686e63;
+  z-index: 10;
+}
+
+.hidden {
+  display: none;
+}
+
 @media screen and (max-width: 786px) {
   .headerLogo {
     display: block;
@@ -68,4 +214,25 @@
     height: 25px;
   }
   
+}
+
+.cartIconWrapper {
+  position: relative;
+  cursor: pointer;
+}
+
+.cartBadge {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background-color: #B88E2F;
+  color: white;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  font-weight: bold;
 }
