--- a/components/categoryDescription/style.module.css
+++ b/components/categoryDescription/style.module.css
@@ -46,3 +46,135 @@ height: 2rem;
   justify-content: space-evenly;
   margin-top: 2rem;
 }
+
+@media (max-width: 500px) {
+  .descriptionContainer {
+    margin-top: 2rem;
+  }
+
+  .descriptionTitleBox {
+    margin-top: 1rem;
+    align-items: normal;
+  }
+
+  .descriptionFirstTitle,
+  .descriptionSecondTitle,
+  .descriptionThirdTitle {
+    font-size: 0.7rem;
+  }
+
+  .descriptionFirstText,
+  .descriptionSecondText,
+  .descriptionThirdText {
+    font-size: 0.8rem;
+    width: 90vw;
+    text-align: center;
+    margin-top: 0.5rem;
+    height: 100%;
+  }
+
+  .descriptionImages {
+    display: flex;
+    /* justify-content: safe; */
+    flex-direction: column;
+    margin-top: 2rem;
+  }
+
+  .descriptionImageItem {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 1rem;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 767px) {
+  .descriptionContainer {
+    margin-top: 2rem;
+  }
+
+  .descriptionTitleBox {
+    margin-top: 1.5rem;
+  }
+
+  .descriptionFirstTitle,
+  .descriptionSecondTitle,
+  .descriptionThirdTitle {
+    font-size: 0.9rem;
+  }
+
+  .descriptionFirstText,
+  .descriptionSecondText,
+  .descriptionThirdText {
+    font-size: 0.9rem;
+    width: 90vw;
+    text-align: justify;
+    margin-top: 1rem;
+    height: 100%;
+  }
+
+  .descriptionImages {
+    flex-direction: column;
+  }
+
+  .descriptionImageItem {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 1.3rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .descriptionContainer {
+    margin-top: 3rem;
+  }
+
+  .descriptionTitleBox {
+    margin-top: 1.5rem;
+  }
+
+  .descriptionFirstTitle,
+  .descriptionSecondTitle,
+  .descriptionThirdTitle {
+    font-size: 1.3rem;
+  }
+
+  .descriptionFirstText,
+  .descriptionSecondText,
+  .descriptionThirdText {
+    width: 95vw;
+    text-align: justify;
+    margin-top: 1.5rem;
+    height: 100%;
+  }
+
+  .descriptionImages {
+    flex-direction: column;
+  }
+
+  .descriptionImageItem {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 1rem;
+  }
+
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .descriptionFirstText,
+  .descriptionSecondText,
+  .descriptionThirdText {
+    width: 95vw;
+    text-align: justify;
+  }
+
+  .descriptionImages {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .descriptionImageItem {
+    width: 80%;
+    margin-bottom: 1rem;
+    object-fit: contain;
+  }
+}
