--- a/components/browse/style.module.css
+++ b/components/browse/style.module.css
@@ -66,14 +66,15 @@
   flex-wrap: wrap;
  }
 
+ .browseLinks {
+  flex-basis: 25%;
+  margin-bottom: 0px;
+ }
+
  .browseImages {
   padding-bottom: 0.8rem;
   width: 100%;
   height: 100%;
- }
-
- .browseLinks {
-  margin-bottom: 10px;
  }
 
  .linkItems {
@@ -100,14 +101,15 @@
   gap: 0 20px;
  }
 
+ .browseLinks {
+  flex-basis: 25%;
+  margin-bottom: 10px;
+ }
+
  .browseImages {
   padding-bottom: 1.8rem;
   width: 100%;
   height: 100%;
- }
-
- .browseLinks {
-  margin-bottom: 15px;
  }
 
  .linkItems {
