--- a/components/products/style.module.css
+++ b/components/products/style.module.css
@@ -112,6 +112,33 @@
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
+  .productsTitle {
+    font-size: clamp(1.8rem, 1.2989rem + 2.5056vw, 2.5rem);
+    margin: 1.2rem 0 1rem;
+  }
+
+  .mainGrid {
+    flex-basis: 10%;
+    justify-content: center;
+    gap: 0.7rem 0.5rem;
+    margin-bottom: 1.2rem;
+  }
+
+   .gridImage {
+    width: 25vw;
+    height: 50%;
+  }
+
+  .gridInfo {
+    width: 25vw;
+    padding: 0.5rem 0.5rem 1rem;
+    height: 3rem;
+  }
+
+  .gridTitle {
+    font-size: 1rem;
+    text-align: center;
+  }
 
 }
 
